--- a/index.html
+++ b/index.html
@@ -6,5 +6,27 @@
   </head>
   <body>
 
+<!-- HEADER SECTION -->
+
+<header>
+
+<!-- LOGO -->
+
+<div class="header-logo">
+<img src="/images/logo.jpg" />
+<span>My Times</span>
+</div>
+
+<!-- HEADER NAVIGATION MENU -->
+
+<nav>
+<span><a href="#">World</a></span>
+<span><a href="#">U.S.</a></span>
+<span><a href="#">Tech</a></span>
+<span><a href="#">Science</a></span>
+</nav>
+
+</header>
+
   </body>
 </html>
