--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- LOGO -->
 
 <div class="header-logo">
-<img src="/images/logo.jpg" />
+<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg" />
 <span>My Times</span>
 </div>
 
